# sdk

./: .gitignore  .prototools  CONTRIBUTING.md  LICENSE  Makefile  README.md  lerna.json  package.json  tsconfig.base.json  tsconfig.json
.github/actions/setup-moon/: action.yml
.github/workflows/: c-test.yml  ci.yml  clojure-test.yml  commonlisp-test.yml  cpp-test.yml  csharp-test.yml  dart.yml  elixir-test.yml  fsharp.yml  go-test.yml  java-test.yml  kotlin-test.yml  node-test.yml  ocaml.yml  php-test.yml  powershell.yml  python-test.yml  r-test.yml  ruby-test.yml  ruby.yml  rust-test.yml  scala-test.yml  swift-test.yml  zig-test.yml  zig.yml
.moon/: toolchain.yml  workspace.yml
c/: .gitignore  CMakeLists.txt  Makefile  README.md  example
c/include/: authdog.h
c/src/: authdog.c
c/tests/: test_authdog.c
clojure/: README.md  project.clj
clojure/src/authdog/: types.clj
clojure/test/authdog/: types_test.clj
commonlisp/: README.md  authdog.asd
commonlisp/src/: client.lisp  errors.lisp
cpp/: AuthdogCppSdkConfig.cmake.in  CMakeLists.txt  Doxyfile.in  Makefile  README.md
cpp/examples/: main.cpp
cpp/include/authdog/: authdog_client.h  exceptions.h  types.h
cpp/scripts/: run_tests.sh
cpp/src/: authdog_client.cpp  exceptions.cpp
cpp/tests/: CMakeLists.txt  test_authdog_client.cpp
csharp/: .gitignore  Authdog.Sdk.csproj  Authdog.Sdk.sln  AuthdogClient.cs  README.md  moon.yml
csharp/Exceptions/: ApiException.cs  AuthdogException.cs  AuthenticationException.cs
csharp/Tests/: Authdog.Sdk.Tests.csproj  AuthdogClientTests.cs  ExceptionTests.cs  README.md  coverlet.runsettings
csharp/Types/: Email.cs  Meta.cs  Names.cs  Photo.cs  Session.cs  User.cs  UserInfoResponse.cs  Verification.cs
dart/lib/: authdog_client.dart
dart/test/: authdog_client_test.dart
elixir/: README.md  mix.exs
elixir/lib/: authdog.ex
elixir/lib/authdog/: client.ex  types.ex
elixir/test/: authdog_test.exs
elixir/test/authdog/: types_test.exs
fsharp/src/: AuthdogClient.fs  Exceptions.fs
fsharp/tests/: Authdog.Sdk.FSharp.Tests.fsproj  Tests.fs
go/: .golangci.yml  README.md  benchmark.txt  benchmark_test.go  client.go  client_test.go  errors.go  errors_test.go  go.mod  moon.yml  types.go
java/: .gitignore  README.md  moon.yml  owasp-suppressions.xml  pom.xml  spotbugs-exclude.xml
java/src/main/java/com/authdog/: AuthdogClient.java  package-info.java
java/src/main/java/com/authdog/exceptions/: ApiException.java  AuthdogException.java  AuthenticationException.java  package-info.java
java/src/main/java/com/authdog/types/: Email.java  Meta.java  Names.java  Photo.java  Session.java  User.java  UserInfoResponse.java  Verification.java  package-info.java
java/src/test/java/com/authdog/: AuthdogClientTest.java
java/src/test/java/com/authdog/exceptions/: ExceptionTest.java
kotlin/: README.md  build.gradle.kts  gradlew
node/: .eslintrc.cjs  README.md  moon.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
node/src/: client.ts  exceptions.ts  index.ts  types.ts
node/tests/: client.test.ts  exceptions.test.ts  setup.ts  types.test.ts
ocaml/lib/: dune
php/: README.md  composer.json
php/src/Types/: Email.php  Meta.php  Names.php  Session.php  User.php  UserInfoResponse.php
php/tests/: AuthdogClientTest.php
planned/c/examples/: main.c
planned/c/include/: authdog.h
planned/c/src/: authdog.c
planned/clojure/src/authdog/: core.clj  exceptions.clj
planned/clojure/test/authdog/: core_test.clj
planned/commonlisp/: tests.lisp
planned/commonlisp/src/: package.lisp  types.lisp
planned/cpp/: CMakeLists.txt  Makefile
planned/cpp/scripts/: install_deps.sh
planned/cpp/tests/: CMakeLists.txt
planned/dart/: README.md  pubspec.yaml
planned/dart/lib/: exceptions.dart  types.dart
planned/elixir/: mix.exs
planned/elixir/lib/authdog/: types.ex
planned/elixir/test/: authdog_test.exs
planned/fsharp/: Authdog.Sdk.FSharp.fsproj
planned/fsharp/src/: AuthdogClient.fs
planned/ocaml/: authdog.opam  dune-project
planned/ocaml/lib/: authdog.ml
planned/ocaml/test/: dune  test_authdog.ml
planned/php/: phpunit.xml
planned/php/src/: AuthdogClient.php
planned/php/src/Exceptions/: ApiException.php  AuthdogException.php  AuthenticationException.php
planned/php/src/Types/: Email.php  Meta.php  Photo.php  User.php  UserInfoResponse.php  Verification.php
planned/powershell/: Authdog.psm1
planned/r/: LICENSE  README.md
planned/r/R/: authdog.R
planned/r/R/authdog/: client.R  exceptions.R  types.R
planned/r/tests/: testthat.R
planned/r/tests/testthat/: test-exceptions.R
planned/ruby/: Gemfile  authdog.gemspec
planned/ruby/lib/: authdog.rb
planned/ruby/lib/authdog/: client.rb  errors.rb  version.rb
planned/ruby/spec/: authdog_client_spec.rb
planned/scala/: README.md
planned/swift/Sources/AuthdogSwiftSDK/: AuthdogClient.swift
planned/swift/Tests/AuthdogSwiftSDKTests/: AuthdogClientTests.swift  AuthdogTypesTests.swift
planned/zig/: build.zig
planned/zig/src/: test.zig
powershell/: Authdog.psd1  Authdog.psm1
powershell/Tests/: Authdog.Tests.ps1
python/: README.md  moon.yml  requirements.txt  setup.py
python/authdog/: __init__.py  client.py  exceptions.py
python/tests/: test_client.py  test_exceptions.py
r/: DESCRIPTION  NAMESPACE
r/tests/testthat/: test-client.R  test-types.R
ruby/: Gemfile  README.md
ruby/spec/: authdog_client_spec.rb  spec_helper.rb
rust/: .gitignore  Cargo.toml  README.md  moon.yml
rust/src/: client.rs  error.rs  lib.rs  types.rs
rust/tests/: client_test.rs  error_test.rs  types_test.rs
scala/: build.sbt  scalastyle-config.xml
scala/src/main/scala/com/authdog/: AuthdogClient.scala
scala/src/test/scala/com/authdog/: AuthdogClientTest.scala
swift/: Package.swift  README.md
swift/Sources/AuthdogSwiftSDK/: AuthdogClient.swift  AuthdogError.swift  AuthdogTypes.swift
swift/Tests/AuthdogSwiftSDKTests/: AuthdogTypesTests.swift
zig/: README.md  build.zig  build.zig.zon
zig/examples/: main.zig
zig/src/: lib.zig  test.zig
(+23 files in other folders)
