[package]
name = "authdog"
version = "0.1.0"
edition = "2021"
authors = ["Authdog <support@authdog.com>"]
description = "Rust SDK for Authdog authentication and user management"
license = "MIT"
repository = "https://github.com/authdog/sdk"
homepage = "https://github.com/authdog/sdk"
keywords = ["authdog", "authentication", "user-management", "sdk"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = ">=1.0, <1.48", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"] }
idna = "0.5"
url = "2.0"
icu_provider = "1.5"
icu_normalizer = "1.5"
icu_collections = "1.5"
icu_properties = "1.5"
litemap = "0.6"
icu_locid = "1.5"
tinystr = "0.6"
writeable = "0.4"
zerovec = "0.9"
yoke = "0.6"
zerofrom = "0.1"
displaydoc = "0.2"
synstructure = "0.12"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5.0"
serde_json = "1.0"

[features]
default = []

